Thu Feb 19 23:48:45 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/genius_lists.c, src/inter.c, src/genius-readline-helper.c: fixup
	  operator list, remove the param list since params have toplevel
	  function nodes nowdays (for better part of a decade already :)

Thu Feb 19 23:19:37 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/genius.c, src/gnome-genius.c: set prgname and application_name
	  for glib

Thu Feb 19 20:33:26 2009  Jiri (George) Lebl <jirka@5z.com>

	* ve/ve-miscui.[ch]: remove the option menu func since option menu is
	  deprecated anyway

	* src/gnome-genius.c: use g_idle_add instead of gtk_idle_add

Wed Feb 18 00:28:12 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: handle read only files properly.  Also verify 
	  text to be proper utf8 before inserting it into the text entry.
	  And the notebook now has a right click menu to switch between
	  programs.

	* src/graphing.c, gtkextra/gtkplotcanvas.c: avoid spurious draws
	  during new plots to avoid flicker when several LinePlot actions
	  are done in sequence.  Also fix gtkextra to honour the freeze 
	  in child draw.

Tue Feb 17 17:35:44 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix the scales on the axis (the precision was
	  reversed!)

	* src/graphing.c: draw the x/y axis and a dotted grid in grey.  This
	  really improves readability I think.  This should be configurable I
	  guess.

	* src/funclib.c, src/gnome-genius.c, src/genius.c: allow setting
	  default for AskString as second argument

	* help/C/gel-function-list.xml: update

Mon Feb 16 01:27:46 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: fix some strings

Mon Feb 16 01:09:16 2009  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: add padding to string query dialogs.  Add stock
	  plot icon

	* pixmaps/*/genius-stock-plot.png: Draw a simple plot icon for the
	  menu/toolbar

Mon Feb 16 00:11:29 2009  Jiri (George) Lebl <jirka@5z.com>
