@@ -1,3 +1,8 @@
+Sat Feb 21 03:12:36 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: after ps/eps export queue draw on the plot canvas
+	  because it for some reason needs it
+
 Thu Feb 19 23:48:45 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/genius_lists.c, src/inter.c, src/genius-readline-helper.c: fixup
